--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
     <body>
         <h1>Moj prvi sajt</h1>
+        <h2>Ovo je podnaslov</h2>
         <p>Dobrodosli - dovidjenja!</p>
     </body>
 </html>  
